swagger, password reset endpoint, emails, ftp
