# routes/auth.router.js
@@ -5,5 +5,6 @@ const auth = require('../controllers/auth.controller.js');
 
 router.post('/login', auth.login);
 router.delete('/logout', auth.logout)
+router.put('/forgot-password', auth.forgotPassword)
 
 module.exports = router;
